# MyKernel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  main.py  pyproject.toml
kernel/: __init__.py  utils.py
kernel/attention/: flash_attention.py
kernel/attention/triton/: flash_attention.py
kernel/c/: utils.h
kernel/gemm/: gemm_fp16_16_8_8.cu
kernel/gemm/cuda/: gemm.cu  gemm.py  gemm_fp16_16_8_8.cu
kernel/shape/: transpose.cu
src/attention/: flash_attention.py
src/elementwise/: elementwise.py
src/kernel/elementwise/: elementwise.py
test/: conftest.py  test_add.py  test_framework.py  utils.py
test/attention/: flash_attention.py  test_flash_attention.py
test/elementwise/: test_add.py
test/gemm/: test_gemm_fp16.py
test/shape/: test_transpose.py
test_framework/: test_abc.py  utils.py
