[project]
name = "my-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "tabulate>=0.9.0",
    "torch==2.8.0",
]

[tool.pytest.ini_options]
addopts = "-v --log-cli-level=DEBUG -s"
