[project]
name = "my-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ninja>=1.13.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "ipython>=9.6.0",
    "isort>=7.0.0",
    "numpy>=2.3.4",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "rich>=14.2.0",
    "tabulate>=0.9.0",
    "torch==2.8.0",
]

[tool.pytest.ini_options]
addopts = [
    "-p", "no:logging",      
    "-vv", "-s",
    "--tb=short",
    "-n 8"
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*", "test_framework"]
